# PowerTunerCLI

./: .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml
.github/workflows/: build_test.yml
src/: PowerTunerCLI.cpp  PowerTunerCLI.h  Utils.cpp  Utils.h  main.cpp
src/CMDParser/: CMDArg.h  CMDParser.cpp  CMDParser.h  SettingsArguments.h
src/Classes/: CLISettings.cpp  CLISettings.h  FileLogger.cpp  FileLogger.h
src/CliHelper/: CliHelper.h
src/CliHelper/Misc/: CliHelperFan.cpp  CliHelperFan.h
src/CliHelper/OS/Linux/: CliHelperLinux.cpp  CliHelperLinux.h  CliHelperLinuxAMD.cpp  CliHelperLinuxAMD.h
src/CliHelper/OS/Windows/: CliHelperWindows.cpp  CliHelperWindows.h
src/Commands/: AppCommands.cpp  AppCommands.h
src/Include/: MessageType.h
src/Resources/: version.h.in
src/Resources/Windows/: win.rc.in
